finished facetview inteface cleaned up css

--- a/index.html
+++ b/index.html
@@ -30,34 +30,16 @@
                  <a id="logo" class="brand logo" href="/">Unlocked.Gov</a>
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-01"></button>
                 <div class="nav-collapse collapse" id="nav-collapse-01">
-                  <ul class="nav">
+                  <ul class="nav" id="nav-bar">
                     <li>
                       <a href="#fakelink">
-                        Menu Item
+                        Upload Data
                         <span class="navbar-unread">1</span>
                       </a>
                     </li>
-                    <li class="active">
-                      <a href="#fakelink">
-                        Messages
-                        <span class="navbar-unread">1</span>
-                      </a>
-                      <ul>
-                        <li><a href="#fakelink">Element One</a></li>
-                        <li>
-                          <a href="#fakelink">Sub menu</a>
-                          <ul>
-                            <li><a href="#fakelink">Element One</a></li>
-                            <li><a href="#fakelink">Element Two</a></li>
-                            <li><a href="#fakelink">Element Three</a></li>
-                          </ul> <!-- /Sub menu -->
-                        </li>
-                        <li><a href="#fakelink">Element Three</a></li>
-                      </ul> <!-- /Sub menu -->
-                    </li>
                     <li>
-                      <a href="#fakelink">
-                        About Us
+                      <a href="#about">
+                        About
                       </a>
                     </li>
                   </ul>
@@ -77,7 +59,7 @@
           
          <section id="ul-main">
              <div class="facet-view-simple"></div>
-         </section>>
+         </section>
           
         </div>
         </div>
@@ -87,7 +69,7 @@
     <section id="about" data-speed="2" data-type="background" class="palette-asbestos">
         <div class="container">
             <div class="page-header">
-                <h1>Final Section Headline <small>Some subtext goes here...</small></h1>
+                <h1>About Unlocked</h1>
             </div>
             <div class="row-fluid">
                 <div class="span4">
