--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           
          <section id="ul-main">
              <div class="facet-view-simple"></div>
+
+            <button id="download-dataset-button-json" class="btn btn-primary"><i class="icon-download-alt icon-white"></i>&nbsp;Download results as JSON</button>
+            <button id="download-dataset-button-csv" class="btn btn-success"><i class="icon-download-alt icon-white"></i>&nbsp;Download results as CSV</button>
          </section>
           
         </div>
