Initial protoviz graphing stuff

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <script type="text/javascript" src="linkify/1.0/jquery.linkify-1.0-min.js"></script>
     <script type="text/javascript" src="js/jquery.facetview.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/protovis.min.js"></script>
     <script src="js/code.js"></script>
 </body>
  
