Added initial graphs of facet results to index

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
          <section id="ul-main">
              <div class="facet-view-simple"></div>
 
+             <div class="graphs">
+              <div id="graph-area"></div>
+              <div id="graph-timeline"></div>
+             </div>
+
             <button id="download-dataset-button-json" class="btn btn-primary"><i class="icon-download-alt icon-white"></i>&nbsp;Download results as JSON</button>
             <button id="download-dataset-button-csv" class="btn btn-success"><i class="icon-download-alt icon-white"></i>&nbsp;Download results as CSV</button>
          </section>
