Align graphs to the right

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
          <section id="ul-main">
              <div class="facet-view-simple"></div>
 
-             <div class="graphs">
-              <div id="graph-area"></div>
-              <div id="graph-timeline"></div>
+             <div class="graphs row-fluid">
+              <div class="span3"></div>
+              <div class="span9">
+                <div id="graph-area"></div>
+                <div id="graph-timeline"></div>
+              </div>
              </div>
 
             <button id="download-dataset-button-json" class="btn btn-primary"><i class="icon-download-alt icon-white"></i>&nbsp;Download results as JSON</button>
