--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
 
              <div class="graphs row-fluid">
               <div class="span3"></div>
-              <div class="span9">
+              <div class="span3">
+                <h3>By Area</h3>
                 <div id="graph-area"></div>
+              </div>
+              <div class="span6">
+                <h3>Timeline</h3>
                 <div id="graph-timeline"></div>
               </div>
              </div>
