--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="main-row row-fluid">
         <div class="span11 ">
         <!--Body content-->
-          <div class="row-fluid">
-              <div id="map" class="span12" style="height:330px"></div>
+          <div class="row-fluid" style="display:inline-block;">
+              <div id="map" class="span12"></div>
           </div>
          <section id="ul-main">
             
@@ -158,6 +158,7 @@
     <script src="js/jquery.tagsinput.js"></script>
     <script src="js/jquery.placeholder.js"></script>
     <script src="js/jquery.stacktable.js"></script>
+    <script src="js/markerclusterer.js"></script>
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpbfvH-2NxgjE3pR7TCIUhHdx2GjZt9Qs&amp;sensor=false">
     </script>
