Added header to top of page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <section id="intro" data-speed="6" data-type="background" class="container-fluid">
         <div class="main-row row-fluid">
         <div class="span11 ">
+
+        <h2>NSW Crime Reports 1995 - 2012</h2>
         <!--Body content-->
           <div class="row-fluid" style="display:inline-block;">
               <div id="map" class="span12"></div>
