--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
         <h2>NSW Crime Reports 1995 - 2012</h2>
         <!--Body content-->
           <div class="row-fluid" style="display:inline-block;">
-              <div id="map" class="span12"></div>
+            <div class="span5">
+              <div id="map"></div>
+            </div>
+              <div class="span7">
+                <h3>Crime trend</h3>
+                <div id="graph-timeline"></div>
+              </div>
           </div>
          <section id="ul-main">
             
@@ -63,10 +69,6 @@
               <div class="span3">
                 <h3>By Area</h3>
                 <div id="graph-area"></div>
-              </div>
-              <div class="span6">
-                <h3>Timeline</h3>
-                <div id="graph-timeline"></div>
               </div>
              </div>
          </section>
