Bunch of changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css" media="screen">
     <link rel="stylesheet" href="css/flat-ui.css" media="screen">
+    <!--<link rel="stylesheet" href="css/flat-ui-buttons.css" media="screen">-->
+    <link rel="stylesheet" href="css/bootstrap-buttons.css" media="screen">
 </head>
 <body>
     <div class="navbar-wrapper">
@@ -61,7 +63,7 @@
                 <div id="graph-timeline"></div>
               </div>
           </div>
-         <section id="ul-main">
+         <section id="ul-main" style="margin-top: 15px;">
             
              <div class="facet-view-simple"></div>
              <div class="graphs row-fluid">
