Moved graphs to top of screen

--- a/index.html
+++ b/index.html
@@ -58,20 +58,38 @@
             <div class="span5">
               <div id="map"></div>
             </div>
-              <div class="span7">
-                <h3>Crime trend</h3>
-                <div id="graph-timeline"></div>
+            <div class="span7">
+              <div class="row-fuild">
+                <div class="span12">
+                  <h3>Crime trend</h3>
+                  <div id="graph-timeline"></div>
+                </div>
               </div>
+              <div class="row-fuild">
+                <div class="span4">
+                  <h3>By Area</h3>
+                  <div id="graph-area"></div>
+                </div>
+              </div>
+              <div class="row-fuild">
+                <div class="span4">
+                  <h3>By Sub Category</h3>
+                  <div id="graph-sub-category"></div>
+                </div>
+              </div>
+              <div class="row-fuild">
+                <div class="span4">
+                  <h3>By Count</h3>
+                  <div id="graph-count"></div>
+                </div>
+              </div>
+            </div>
           </div>
          <section id="ul-main" style="margin-top: 15px;">
             
              <div class="facet-view-simple"></div>
              <div class="graphs row-fluid">
               <div class="span3"></div>
-              <div class="span3">
-                <h3>By Area</h3>
-                <div id="graph-area"></div>
-              </div>
              </div>
          </section>
           
