--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
               <div id="map"></div>
             </div>
             <div class="span7">
-              <div class="row-fuild">
+              <div class="row-fuild ">
                 <div class="span12">
                   <h3>Crime trend</h3>
                   <div id="graph-timeline"></div>
                 </div>
               </div>
-              <div class="row-fuild">
+              <div class="row-fuild graphs">
                 <div class="span4">
                   <h3>By Area</h3>
                   <div id="graph-area"></div>
