Visual warning for IE < 9

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
       </div> <!-- /.container -->
     </div>
 
+    <!-- Browser incompatibility warning -->
+    <!--[if lt IE 9]>
+    <div class="container-fluid">
+      <div class="row-fluid" style="margin-top: 60px; height: 200px;">
+        <div class="span12 alert alert-error">
+          <p><b>Old Browser Warning!</b> Unlockd is designed to work on modern browsers. We see you are using IE8 or below. Please switch to either:
+            <ol>
+              <li><a href="http://www.google.com/chrome">Chrome</a></li>
+              <li><a href="http://www.mozilla.org/en-US/firefox/new/">Firefox</a></li>
+              <li><a href="http://www.apple.com/au/safari/">Safari</a></li>
+              <li><a href="http://www.microsoft.com/AU/Internet-Explorer">Internet Explorer 9 or 10</a></li>
+            </ol>
+          </p>
+        </div>
+      </div>
+    </div>
+    <![endif]-->
+
     <!-- Section #1 -->
     <section id="intro" data-speed="6" data-type="background" class="container-fluid">
         <div class="main-row row-fluid">
