--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <link rel="stylesheet" href="css/flat-ui.css" media="screen">
     <!--<link rel="stylesheet" href="css/flat-ui-buttons.css" media="screen">-->
     <link rel="stylesheet" href="css/bootstrap-buttons.css" media="screen">
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-41421814-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 </head>
 <body>
     <div class="navbar-wrapper">
