--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Unlocked.Gov- Discover Data Stats</title>
+    <title>Unlockd.Gov - Discover Data Stats</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css" media="screen">
     <link rel="stylesheet" href="css/normalize.css" media="screen">
@@ -112,77 +112,118 @@
     </section>
 
     <!-- Section #3 -->
-    <section id="about" data-speed="2" data-type="background" class="palette-asbestos">
+    <section id="about" data-speed="2" data-type="background" class="">
         <div class="container">
-            <div class="page-header">
-                <h1>About Unlocked</h1>
-            </div>
             <div class="row-fluid">
-                <div class="span4">
-                  <h2>More Details</h2>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque cursus nisl consectetur et.</p>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque cursus nisl consectetur et.</p>
-                  <p><a class="btn btn-success">View details &raquo;</a></p>
-                </div><!-- /.span4 -->
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <div class="media">
-                        <a class="pull-left" href="#">
-                            <img class="media-object" src="images/check.png">
-                        </a>
-                        <div class="media-body">
-                            <h4 class="media-heading">Media heading</h4>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante.
+                <div class="span6 info">
+                <div class="title-header">
+                  <h1>About Unlocked</h1>
+                </div>
+                  <h2>Unlocking government data, so that you don't have to.</h2>
+                  <p>With a world of public data the possibilities are endless but too often, valuable government data is given over in formats that are unusable.</p>
+
+                  <p>Users have different needs, requiring different subsets or representations of the data.
+
+Unlockd solves this problem by standardising all data into one format and storing it in a centralised repository. Public servants upload all their data through one interface, and don't need to worry about any technicalities. Users can then access the data through a neat visual interface, choose any part of the data they want, pick any format they want the data to be turned into, and then download that format of the data.</p>
+
+<p>This creates the first ever standardised body of government data that users of all different levels of technical expertise can access and use. Very technical users can access JSON and CSV data that they need for their analysis, whereas less technical users can easily access PDF and XLS outputs from the web application without needing to do any tricky conversion.</p>
+                  <p><a href="#view-more" class="btn btn-success" data-toggle="modal">View more&raquo;</a></p>
+                </div>
+                <!-- /.span4 -->
+                <div id="team" class="span6">
+                <div class="title-header">
+                  <h1>The Team</h1>
+                </div>
+                 <div class="row">
+                   <div class="span4">
+                    <img src="images/team/adam.jpg" alt="Adam ">
+                    <div class="bio">
+                      <b>Adam Neumann</b><br/>
+                      <span> Full-Stack Developer</span>
+                      
+                      <div class="connect">
+                          <ul>
+                          <li>
+                            <a class="linkedIn" href="http://www.linkedin.com/in/adamneumann" title="linkedIn"><span>LinkedIn</span></a>
+                          </li>
+                          <li>
+                            <a class="twitter" href="http://twitter.com/noizwaves" title="linkedIn"><span>Twitter</span></a>
+                          </li>
+                          </ul>
                         </div>
                     </div>
-                    <div class="media">
-                        <a class="pull-left" href="#">
-                            <img class="media-object" src="images/check.png">
-                        </a>
-                        <div class="media-body">
-                            <h4 class="media-heading">Media heading</h4>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante.
+                   </div>
+                    <div class="span4">
+                      <img src="images/team/andrew.jpg" alt="Andrew">
+                      <div class="bio">                        
+                        <b>Andrew Grealy</b><br/>
+                        <span>Data Whisperer</span>
+                        
+                        <div class="connect">
+                          <ul>
+                          <li>
+                            <a class="linkedIn" href="http://www.linkedin.com/in/andrewgrealy" title="linkedIn"><span>LinkedIn</span></a>
+                          </li>
+                          <!-- <li>
+                            <a class="twitter" href="http://twitter.com//mikeebinum/" title="linkedIn"><span>Twitter</span></a>
+                          </li> -->
+                          </ul>
                         </div>
+                      </div>
                     </div>
-                    <div class="media">
-                        <a class="pull-left" href="#">
-                            <img class="media-object" src="images/check.png">
-                        </a>
-                        <div class="media-body">
-                            <h4 class="media-heading">Media heading</h4>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante.
+                 </div>
+                  <div class="row">
+                    <div class="span4">
+                      <img src="images/team/joseph-valente.jpg" alt="joseph valente">
+                      <div class="bio">
+                        <b>Joseph Valente</b><br/>
+                        <span>Business Guru</span>
+                        <div class="connect">
+                          <ul>
+                          <li>
+                            <a class="linkedIn" href="http://www.linkedin.com/in/josephvalente/" title="linkedIn"><span>LinkedIn</span></a>
+                          </li>
+                          <li>
+                            <a class="twitter" href="http://twitter.com/joeyvalente/" title="linkedIn"><span>Twitter</span></a>
+                          </li>
+                          </ul>
                         </div>
+                      </div>
                     </div>
-                </div><!-- /.span4 -->
-                <div class="span4">
-                  <h2>Log In</h2>
-                  <form class="form">
-                      <div class="control-group">
-                        <label class="control-label" for="inputEmail">Email</label>
-                        <div class="controls">
-                          <input type="text" id="inputEmail" placeholder="Email">
+                    <div class="span4">
+                      <img src="images/team/mike-e.jpg" alt="Mike Ebinum ">
+                      <div class="bio">
+                        <b>Mike Ebinum</b><br/>
+                        <span>Full-Stack Developer</span>
+                        <div class="connect">
+                          <ul>
+                          <li>
+                            <a class="linkedIn" href="http://au.linkedin.com/in/mebinum/" title="linkedIn"><span>LinkedIn</span></a>
+                          </li>
+                          <li>
+                            <a class="twitter" href="http://twitter.com//mikeebinum/" title="linkedIn"><span>Twitter</span></a>
+                          </li>
+                          </ul>
                         </div>
                       </div>
-                      <div class="control-group">
-                        <label class="control-label" for="inputPassword">Password</label>
-                        <div class="controls">
-                          <input type="password" id="inputPassword" placeholder="Password">
-                        </div>
-                      </div>
-                      <div class="control-group">
-                        <div class="controls">
-                          <label class="checkbox">
-                            <input type="checkbox"> Remember me <br><br>
-                          </label>
-                          <button type="submit" class="btn btn-success">Sign in</button>
-                        </div>
-                      </div>
-                    </form>
+                    </div>
+                  </div>
                 </div><!-- /.span4 -->
             </div>
         </div>
     </section>
-
+    <div id="view-more" class="modal hide fade">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Unlockd Video</h3>
+      </div>
+      <div class="modal-body">
+        <div class="field-items"><div class="field-item even"><iframe width="535" height="315" src="http://www.youtube.com/embed/z11hqoNhNxU?wmode=opaque" frameborder="0" allowfullscreen=""></iframe></div></div>
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="btn"  data-dismiss="modal">Close</a>
+      </div>
+    </div>
     <!--[if lt IE 9]>
     <script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.2.4/json3.min.js"></script>
