--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Unlockd solves this problem by standardising all data into one format and storin
                  </div>
                   <div class="row">
                     <div class="span4">
-                      <img src="images/team/joseph-valente.jpg" alt="joseph valente">
+                      <img src="images/team/joe-valente.jpg" alt="joseph valente">
                       <div class="bio">
                         <b>Joseph Valente</b><br/>
                         <span>Business Guru</span>
