Link to new platform page

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 
     <!-- Section #1 -->
     <section id="intro" data-speed="6" data-type="background" class="container-fluid">
+    <div class="row-fluid" style="margin-top: 10px;">
+      <div class="offset1 span10 alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>New platform coming soon!</strong> This is the petrified Unlockd website for GovHack 2013. Click <a href="http://unlockd.co" target="_blank"> here for information about our new platform.</a>
+      </div>
+    </div>
         <div class="main-row row-fluid">
         <div class="span11 ">
 
