--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="row-fluid" style="margin-top: 10px;">
       <div class="offset1 span10 alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>New platform coming soon!</strong> This is the petrified Unlockd website for GovHack 2013. Click <a href="http://unlockd.co" target="_blank"> here for information about our new platform.</a>
+        <strong>New platform coming soon!</strong> This is the award winning website for GovHack 2013 - built in a weekend. Click <a href="http://unlockd.co" target="_blank"> here for information about the new platform.</a>
       </div>
     </div>
         <div class="main-row row-fluid">
