Removed old team block, more info button now links to unlockd.co

--- a/index.html
+++ b/index.html
@@ -147,88 +147,9 @@
 Unlockd solves this problem by standardising all data into one format and storing it in a centralised repository. Public servants upload all their data through one interface, and don't need to worry about any technicalities. Users can then access the data through a neat visual interface, choose any part of the data they want, pick any format they want the data to be turned into, and then download that format of the data.</p>
 
 <p>This creates the first ever standardised body of government data that users of all different levels of technical expertise can access and use. Very technical users can access JSON and CSV data that they need for their analysis, whereas less technical users can easily access PDF and XLS outputs from the web application without needing to do any tricky conversion.</p>
-                  <p><a href="#view-more" class="btn btn-success" data-toggle="modal">View more&raquo;</a></p>
+                  <p><a href="http://unlockd.co" target="_blank" class="btn btn-success">See more information &raquo;</a></p>
                 </div>
                 <!-- /.span4 -->
-                <div id="team" class="span6">
-                <div class="title-header">
-                  <h1>The Team</h1>
-                </div>
-                 <div class="row">
-                   <div class="span4">
-                    <img src="images/team/adam.jpg" alt="Adam ">
-                    <div class="bio">
-                      <b>Adam Neumann</b><br/>
-                      <span> Full-Stack Developer</span>
-                      
-                      <div class="connect">
-                          <ul>
-                          <li>
-                            <a class="linkedIn" href="http://www.linkedin.com/in/adamneumann" title="linkedIn"><span>LinkedIn</span></a>
-                          </li>
-                          <li>
-                            <a class="twitter" href="http://twitter.com/noizwaves" title="linkedIn"><span>Twitter</span></a>
-                          </li>
-                          </ul>
-                        </div>
-                    </div>
-                   </div>
-                    <div class="span4">
-                      <img src="images/team/andrew.jpg" alt="Andrew">
-                      <div class="bio">                        
-                        <b>Andrew Grealy</b><br/>
-                        <span>Data Whisperer</span>
-                        
-                        <div class="connect">
-                          <ul>
-                          <li>
-                            <a class="linkedIn" href="http://www.linkedin.com/in/andrewgrealy" title="linkedIn"><span>LinkedIn</span></a>
-                          </li>
-                          <!-- <li>
-                            <a class="twitter" href="http://twitter.com//mikeebinum/" title="linkedIn"><span>Twitter</span></a>
-                          </li> -->
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                 </div>
-                  <div class="row">
-                    <div class="span4">
-                      <img src="images/team/joe-valente.jpg" alt="joseph valente">
-                      <div class="bio">
-                        <b>Joseph Valente</b><br/>
-                        <span>Business Guru</span>
-                        <div class="connect">
-                          <ul>
-                          <li>
-                            <a class="linkedIn" href="http://www.linkedin.com/in/josephvalente/" title="linkedIn"><span>LinkedIn</span></a>
-                          </li>
-                          <li>
-                            <a class="twitter" href="http://twitter.com/joeyvalente/" title="linkedIn"><span>Twitter</span></a>
-                          </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="span4">
-                      <img src="images/team/mike-e.jpg" alt="Mike Ebinum ">
-                      <div class="bio">
-                        <b>Mike Ebinum</b><br/>
-                        <span>Full-Stack Developer</span>
-                        <div class="connect">
-                          <ul>
-                          <li>
-                            <a class="linkedIn" href="http://au.linkedin.com/in/mebinum/" title="linkedIn"><span>LinkedIn</span></a>
-                          </li>
-                          <li>
-                            <a class="twitter" href="http://twitter.com//mikeebinum/" title="linkedIn"><span>Twitter</span></a>
-                          </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div><!-- /.span4 -->
             </div>
         </div>
     </section>
